--- a/service/requirements.txt
+++ b/service/requirements.txt
@@ -12,3 +12,13 @@ Jinja2==2.10
 MarkupSafe==1.0
 pymongo==3.7.1
 Werkzeug==0.14.1
+click==6.7
+Flask==1.0.2
+Flask-PyMongo==2.1.0
+functools32==3.2.3.post2
+itsdangerous==0.24
+Jinja2==2.10
+jsonschema==2.6.0
+MarkupSafe==1.0
+pymongo==3.7.1
+Werkzeug==0.14.1
