--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -7,7 +7,5 @@ WORKDIR /home/magalu/app
 COPY . .
 RUN pip install -r requirements.txt
 
-ENV FLASK_APP run.py
-
 EXPOSE 5000
-ENTRYPOINT flask run
+ENTRYPOINT python run.py
