--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - db
-  db:
+      - mongo
+    env_file:
+      - ./service/env/.env.production
+  mongo:
     image: mongo
