--- a/service/requirements.txt
+++ b/service/requirements.txt
@@ -47,3 +47,37 @@ pymongo==3.7.1
 python-dotenv==0.9.1
 waitress==1.1.0
 Werkzeug==0.14.1
+atomicwrites==1.1.5
+attrs==18.1.0
+funcsigs==1.0.2
+more-itertools==4.3.0
+pathlib2==2.3.2
+pluggy==0.7.1
+py==1.5.4
+pytest==3.7.2
+scandir==1.9.0
+six==1.11.0
+atomicwrites==1.1.5
+attrs==18.1.0
+click==6.7
+Flask==1.0.2
+Flask-PyMongo==2.1.0
+funcsigs==1.0.2
+functools32==3.2.3.post2
+gunicorn==19.9.0
+itsdangerous==0.24
+Jinja2==2.10
+jsonschema==2.6.0
+MarkupSafe==1.0
+more-itertools==4.3.0
+nose==1.3.7
+pathlib2==2.3.2
+pluggy==0.7.1
+py==1.5.4
+pymongo==3.7.1
+pytest==3.7.2
+python-dotenv==0.9.1
+scandir==1.9.0
+six==1.11.0
+waitress==1.1.0
+Werkzeug==0.14.1
